# astchunk

./: README.md  pyproject.toml  requirements.txt
data/code_samples/: calculator.rb
examples/: ruby_demo.py
examples/outputs/: ast_chunking_with_expansion_results.txt
src/astchunk/: __init__.py  astchunk.py  astchunk_builder.py
tests/: test_ruby_support.py
